--- a/frontend/src/Containers/styles.module.scss
+++ b/frontend/src/Containers/styles.module.scss
@@ -69,21 +69,21 @@
 
 .buttonFacebook {
   background-color: #3b5998;
-  color: #d3d3d3;
+  color: white;
 
   &:hover {
     background-color: #2b4170;
-    color: #d3d3d3;
+    color: white;
   }
 }
 
 .buttonInstagram {
   background-color: #d62976;
-  color: #d3d3d3;
+  color: white;
 
   &:hover {
     background-color: #a8225e;
-    color: #d3d3d3;
+    color: white;
   }
 }
 
